# goblin

./: .gitignore  English_test.csv  README.md  compose.yml  datamodel.toml  fill_system.py  sample_input.json  sample_test_sql_query.sql
goblin_backend/: Dockerfile  __init__.py  main.py  pyproject.toml  test_message.py  test_queue.py
goblin_backend/engine/: __init__.py  engine.py  plan.py  script.py  test_engine.py  test_engine_example.py
goblin_backend/plans/: AB.toml  example.toml  hate_speech_ab.toml  multi_model_comparison.toml
goblin_backend/scripts/Example/: goblin.toml  main.ts
goblin_backend/scripts/compare_all_models/: main.py
goblin_backend/scripts/compare_models/: main.py
goblin_backend/scripts/dbInsert/: deno.json  goblin.toml  hate_speech_results.db  input.jsonl  main.ts
goblin_backend/scripts/modelA/: goblin.toml  main.ts  test.sh
goblin_backend/scripts/modelB/: deno.json  goblin.toml  input.jsonl  main.ts  test.sh
goblin_backend/scripts/pythonDbInsert/: goblin.toml  hate_speech_results.db  main.py  pyproject.toml
goblin_backend/scripts/rustInsert/: Cargo.toml  goblin.toml  hate_speech_results.db
goblin_backend/scripts/rustInsert/src/: main.rs
model/: .env.example  README.md  __init__.py  requirements.txt
model/api/: __init__.py  claude_model.py
model/base/: __init__.py  credentials.py  data.py  model.py
model/basic/: __init__.py  bow_logistic.py
model/components/: __init__.py  datasets.py  feature_extractors.py  model_architectures.py
model/integration/: __init__.py  goblin_adapter.py  model_registry.py
(+16 files in other folders)
