[project]
name = "goblin-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pika>=1.3.2",
    "pytest>=8.4.2",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]
exclude = ["plans*", "scripts*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
testpaths = [
    "."
]
addopts = "-v"
pythonpath = [
    "."
]
